plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'juliokozarewicz'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {

    // Default
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.apache.httpcomponents.client5:httpclient5'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// Inputs Validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// Database
	implementation 'org.springframework.boot:spring-boot-starter-flyway'   // Flyway
	implementation "org.flywaydb:flyway-database-postgresql"               // Flyway
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // JPA
	implementation 'org.postgresql:postgresql'                             // Postgresql
	runtimeOnly 'com.h2database:h2'                                        // H2 DB test

	// Cache
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// Messaging
    implementation 'org.springframework.boot:spring-boot-starter-kafka'
    testImplementation 'org.springframework.kafka:spring-kafka-test'

}

tasks.named('test') {
	useJUnitPlatform()
}
